[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-dbscan-rl"
version = "0.1.0"
description = "Adaptive DBSCAN hyperparameter tuning with reinforcement learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "gym>=0.26",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "tqdm>=4.66",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["adaptive_dbscan_rl*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"